tests/snapshots/run_wpt_conformance__litert_pad_int32_2D_tensor_options_value.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 69
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
pad.https.any.js pad int32 2D tensor options.value, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    padInput: i32[3, 3];
  }

  nodes {
    [padOutput] = pad(padInput, label="", mode="", value=-1);
  }

  outputs { padOutput; }
}
