tests/snapshots/run_wpt_conformance__litert_pad_int64_2D_tensor_with_options_value_as_bigint.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 69
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
pad.https.any.js pad int64 2D tensor with options.value as bigint, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    padInput: i64[3, 3];
  }

  nodes {
    [padOutput] = pad(padInput, label="", mode="", value="9007199254740992");
  }

  outputs { padOutput; }
}
