tests/snapshots/run_wpt_conformance__litert_padding_float32_0D_constant_tensor_with_empty_paddings_should_be_no-op.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
pad.https.any.js padding float32 0D constant tensor with empty paddings should be no-op, litert
 pad :: padding float32 0D constant tensor with empty paddings should be no-op: index 0: actual=0 expected=22.763618 ulp=1102453732 tolerance=4
  inputs: padInput: [22.76361846923828] (constant)
  expected padOutput: [22.763618]
  actual padOutput: [0]

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[] @bytes([228, 27, 182, 65]);
  }

  nodes {
    [padOutput] = pad(operand_0, label="", mode="", value=null);
  }

  outputs { padOutput; }
}
